# fgp-vercel

./: Cargo.toml  README.md  manifest.json
.github/workflows/: release.yml
src/: main.rs  models.rs  service.rs
src/api/: client.rs  mod.rs
