[package]
name = "fgp-vercel"
version = "0.1.0"
edition = "2021"
description = "FGP daemon for Vercel deployment operations via REST API"
license = "MIT"
authors = ["Wolfgang Schoenberger"]

[[bin]]
name = "fgp-vercel"
path = "src/main.rs"

[dependencies]
# FGP daemon SDK
fgp-daemon = { path = "../daemon" }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
dirs = "6.0"
clap = { version = "4", features = ["derive"] }
shellexpand = "3.1"
libc = "0.2"
daemonize = "0.5"
