[package]
name = "fgp-vercel"
version = "0.1.0"
edition = "2021"
description = "FGP daemon for Vercel deployment operations via REST API"
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/vercel"
authors = ["Wolfgang Schoenberger"]

[[bin]]
name = "fgp-vercel"
path = "src/main.rs"

[dependencies]
# FGP daemon SDK
fgp-daemon = { git = "https://github.com/fast-gateway-protocol/daemon.git" }

# HTTP client (disable default-tls to avoid OpenSSL for cross-compilation)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
dirs = "6.0"
clap = { version = "4", features = ["derive"] }
shellexpand = "3.1"
libc = "0.2"
daemonize = "0.5"
